# jupyterlab-theme-material-night-eighties

./: .eslintrc.js  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .pypirc  .stylelintcache  .yamllint.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  babel.config.js  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/: dependabot.yaml
.github/workflows/: build.yaml  build.yml  check-release.yaml  check-release.yml  enforce-labels.yaml  enforce-labels.yml  npm-publish.yml  pre-commit.yml  prep-release.yaml  prep-release.yml  publish-release.yaml  publish-release.yml  publish.yml  update-integration-tests.yaml
jupyterlab_material_darker/: .gitignore  LICENSE  README.md  setup.py
jupyterlab_material_darker/.github/workflows/: build.yml
jupyterlab_material_darker/binder/: environment.yml  postBuild
jupyterlab_material_darker/style/: variables.css
jupyterlab_material_night_eighties/: __init__.py  _version.py
scss/: README.md  gen_scss.sh  material-darker.scss  variables.css  variables.css.map
src/: index.ts
src/__tests__/: jupyterlab_material_night_eighties_theme.spec.ts
style/: index.css  variables.css
ui-tests/: README.md  package.json  playwright.config.js
ui-tests/tests/: jupyterlab_material_night_eighties_theme.spec.ts
